force-app/main/default/objects/Sales_Confirmation__c/Sales_Confirmation__c.object-meta.xml
<CustomObject>
    <label>Sales Order.</label>
    <nameField>
        <displayFormat>SC - {0000}/26</displayFormat>
        <label>Sales Confirmation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders.</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>