force-app/main/default/objects/Sales_Confirmation__c/fields/BPL_IDAssignedToInvoice__c.field-meta.xml
<CustomField>
    <fullName>BPL_IDAssignedToInvoice__c</fullName>
    <label>BPL_IDAssignedToInvoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>