force-app/main/default/objects/Sales_Confirmation__c/fields/Credit_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval_Status__c</fullName>
    <label>Credit Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Finance Manager Approved</fullName>
            </value>
            <value>
                <fullName>Finance Manager Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>