force-app/main/default/objects/Sales_Confirmation__c/fields/Credit_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Due_Date__c</fullName>
    <label>Credit Due Date</label>
    <type>Date</type>
</CustomField>