force-app/main/default/objects/Sales_Confirmation__c/fields/Manager_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Manager_Remarks__c</fullName>
    <label>Manager Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>