force-app/main/default/objects/Sales_Confirmation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Deals__c</referenceTo>
    <relationshipName>Sales_Confirmations</relationshipName>
    <type>Lookup</type>
</CustomField>