force-app/main/default/objects/Sales_Confirmation__c/fields/Preferred_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Delivery_Date__c</fullName>
    <label>Preferred Delivery Date</label>
    <type>Date</type>
</CustomField>