force-app/main/default/objects/Sales_Confirmation__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>TextArea</type>
</CustomField>