force-app/main/default/objects/Sales_Confirmation__c/fields/Sales_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>Sales Order Id (SAP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>