force-app/main/default/objects/Sales_Confirmation__c/fields/SAP_Doc_Num__c.field-meta.xml
<CustomField>
    <fullName>SAP_Doc_Num__c</fullName>
    <label>SAP Sales Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>