force-app/main/default/objects/Sales_Confirmation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Product_Category__c</columns>
    <columns>SAP_Doc_Num__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>