force-app/main/default/objects/Sales_Confirmation__c/listViews/so_bating_Sales_Confirmation.listView-meta.xml
<ListView>
    <fullName>so_bating_Sales_Confirmation</fullName>
    <filterScope>Queue</filterScope>
    <label>so-bathing</label>
    <queue>so_bating</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>