force-app/main/default/objects/Sales_Confirmation__c/listViews/so_budjet_buy_Sales_Confirmation.listView-meta.xml
<ListView>
    <fullName>so_budjet_buy_Sales_Confirmation</fullName>
    <filterScope>Queue</filterScope>
    <label>so-budjet buy</label>
    <queue>so_budjet_buy</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>