force-app/main/default/objects/Sales_Confirmation__c/listViews/so_ho_Sales_Confirmation.listView-meta.xml
<ListView>
    <fullName>so_ho_Sales_Confirmation</fullName>
    <filterScope>Queue</filterScope>
    <label>so- ho</label>
    <queue>so_ho</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>