force-app/main/default/objects/Sales_Confirmation__c/listViews/so_nsd_Sales_Confirmation.listView-meta.xml
<ListView>
    <fullName>so_nsd_Sales_Confirmation</fullName>
    <filterScope>Queue</filterScope>
    <label>so-nsd</label>
    <queue>so_nsd</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>