force-app/main/default/objects/Sales_Confirmation__c/listViews/so_vengeri_Sales_Confirmation.listView-meta.xml
<ListView>
    <fullName>so_vengeri_Sales_Confirmation</fullName>
    <filterScope>Queue</filterScope>
    <label>so-vengeri</label>
    <queue>so_vengeri</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>